--- a/algorithm_study.vcxproj.filters
+++ b/algorithm_study.vcxproj.filters
@@ -21,5 +21,17 @@
     <ClCompile Include="1525.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="13398.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1111.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="3079.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="7490.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
