--- a/algorithm_study.vcxproj.filters
+++ b/algorithm_study.vcxproj.filters
@@ -33,5 +33,11 @@
     <ClCompile Include="7490.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2904.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="17352.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
